<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Delt\'app</string>
    <string name="retour">Retour page d\'accueil</string>
    <string name="login">LOGIN</string>
    <string name="text">text</string>

    <!-- Register/Login page String -->
    <string name="emailText">mon@mail.com</string>
    <string name="prenomText">Prénom</string>
    <string name="nomText">Nom</string>
    <string name="passwordText">Mot de passe</string>
    <string name="passwordText2">Confirmation MDP</string>
    <string name="registerButtonText">S\'inscrire</string>
    <string name="loginButtonText">Se connecter</string>
    <string name="alreadyRegistered">Déja un compte? Connecte-toi !</string>
    <string name="noAccount">Pas encore inscrit? Inscris-toi !</string>
    <string name="account_title">VOTRE COMPTE</string>
    <string name="disconnectAccount">Se déconnecter</string>

    <!-- Accueil -->
    <string name="module_equation_2nd">Équation du 2nd degré</string>
    <string name="module_basic_maths" tools:ignore="Typos">Calculs basiques (+-*/)</string>
    <string name="modules_selection_title">HOME</string>
    <string name="calculer_button">Calculer</string>
    <string name="durand">Durand</string>
    <string name="desc_module_picture">Module Picture</string>
    <string name="nom_du_module">Nom du module</string>
    <string name="background_color">Background color</string>
    <string name="sign_up_icon">Sign up icon</string>
    <string name="inscription">Inscription</string>
    <string name="e_mail">E-MAIL</string>
    <string name="prenom">PRENOM</string>
    <string name="nom">NOM</string>
    <string name="mot_de_passe">MOT DE PASSE</string>
    <string name="confirmation_mot_de_passe">CONFIRMATION MOT DE PASSE</string>
    <string name="login_icon">Login icon</string>
    <string name="description">Description</string>
    <string name="informations_personnelles">Informations personnelles</string>
    <string name="vos_10_derniers_calculs">Vos 10 derniers calculs</string>
    <string name="photo_de_profil">Photo de profil</string>
    <string name="michel">Michel</string>

    <!-- Colors -->
    <color name="white">#FFFFFF</color>
    <color name="black">#000000</color>
    <color name="dark">#0B0811</color>
    <color name="red">#fd0000</color>
    <color name="temptress">#430012</color>
    <color name="revolver">#231a34</color>
    <color name="firefly">#133337</color>
    <color name="mineshaft">#302d2d</color>
    <color name="laspalmas">#D0ED12</color>
    <color name="bluebutton">#1398FF</color>

</resources>