<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark"
    tools:context="fr.projetl3.deltapp.Accueil">

    <Button
        android:id="@+id/camera_capture_button_accueil"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginBottom="35dp"
        android:elevation="2dp"
        android:ellipsize="none"
        android:scaleType="fitCenter"
        android:background="@drawable/rounded_button_disabled"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <ImageButton
        android:id="@+id/login_button_accueil"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="35dp"
        android:background="@drawable/rounded_button"
        android:elevation="2dp"
        android:ellipsize="none"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_login"
        android:contentDescription="@string/login" />

    <ImageButton
        android:id="@+id/menu_button_accueil"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="35dp"
        android:background="@drawable/rounded_button"
        android:contentDescription="@string/login"
        android:elevation="2dp"
        android:ellipsize="none"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/camera_capture_button_accueil"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_menu_disabled" />

    <ImageButton
        android:id="@+id/basic_maths_button"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="120dp"
        android:background="@color/dark"
        android:contentDescription="@string/login"
        android:visibility="gone"
        android:elevation="2dp"
        android:ellipsize="none"
        android:scaleType="fitCenter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/icons_basic_maths" />

    <TextView
        android:id="@+id/tv_basic_maths"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:text="@string/module_basic_maths"
        android:textColor="@color/laspalmas"
        android:textSize="16sp"
        android:visibility="gone"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/basic_maths_button"
        app:layout_constraintEnd_toEndOf="@+id/basic_maths_button"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/basic_maths_button" />

    <ImageButton
        android:id="@+id/equation_2nd_button"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="120dp"
        android:background="@color/dark"
        android:visibility="gone"
        android:contentDescription="@string/login"
        android:elevation="2dp"
        android:ellipsize="none"
        android:scaleType="fitCenter"
        app:layout_constraintStart_toEndOf="@+id/basic_maths_button"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/icons_eq2degre" />


    <TextView
        android:id="@+id/tv_equation_2nd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="6dp"
        android:text="@string/module_equation_2nd"
        android:visibility="gone"
        android:textColor="@color/red"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/equation_2nd_button"
        app:layout_constraintEnd_toEndOf="@+id/equation_2nd_button"
        app:layout_constraintStart_toStartOf="@+id/equation_2nd_button"
        />

    <TextView
        android:id="@+id/tv_module_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/modules_selection_title"
        android:textStyle="bold"
        android:textSize="30sp"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_result"
        android:layout_width="364dp"
        android:layout_height="110dp"
        android:layout_marginTop="35dp"
        android:text=""
        android:textColor="@color/white"
        android:textStyle="bold"
        android:visibility="gone"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calc_button" />

    <EditText
        android:id="@+id/input_calc"
        android:layout_width="330dp"
        android:layout_height="91dp"
        android:layout_marginTop="35dp"
        android:background="@drawable/text_border"
        android:ems="10"
        android:text=""
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_module_title" />

    <Button
        android:id="@+id/calc_button"
        android:layout_width="193dp"
        android:layout_height="55dp"
        android:layout_marginTop="35dp"
        android:text="@string/calculer_button"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="20sp"
        android:visibility="gone"
        android:background="@color/firefly"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_calc" />


</androidx.constraintlayout.widget.ConstraintLayout>